2005-09-20  Per Abrahamsen  <abraham@dina.kvl.dk>

	* alist.h, alist.C (name_sequence): New accessor.

2005-09-06  Per Abrahamsen  <abraham@dina.kvl.dk>

	* txt/Makefile (exercises.pdf): Depfix.

	* Version 3.79 released.

2005-09-06  Per Abrahamsen  <abraham@dina.kvl.dk>

	* log_harvest.C: Moved water and N stress last.

2005-08-30  Per Abrahamsen  <abraham@dina.kvl.dk>

	* condition_soil.C (soil_inorganic_N_above): New condition.

2005-08-26  Per Abrahamsen  <abraham@dina.kvl.dk>

	* daisy.h (class Daisy): Made constructor explicit.

2005-08-25  Per Abrahamsen  <abraham@dina.kvl.dk>

	* dlf.C, dlf.h: New utility.
	* Makefile (OTHER): Added it.

	* lib/log-std.dai ("Soil nitrogen"): Fix "where" parameter.

	* log_table.C (print_header): Support new "fixed" value.

2005-08-24  Per Abrahamsen  <abraham@dina.kvl.dk>

	* Version 3.78 released.

2005-08-24  Per Abrahamsen  <abraham@dina.kvl.dk>

	* harvesting.h, harvesting.C (operator ()): New 'combine' parameter.
	* crop_old.C, crop_sold.C, crop_simple.C:
	* crop.h, crop_crop_std.C (harvest): Update caller.
	* crop.C (kill): Update caller.
	* vegetation.h, vegetation_crops.C, vegetation_permanent.C
	(harvest): Update caller. 
	* column.h, column_base.h, column_base.C (harvest): Update caller.
	* field.C, field.h (harvest): Update caller.
	* action_harvest.C (combine): New parameter.
	* action_crop.C, action_harvest.C (doIt): Update caller.

	* crpn.h (nitrogen_stress_days): Made it public.
	* harvest.h, harvest.C (water_stress_days, nitrogen_stress_days):
	New harvest data. 
	* harvesting.C, harvesting.h (operator ()): Update caller.
	* crop_old.C, crop_sold.C, crop_simple.C, crop_std.C (harvest):
	Update caller. 
	* log_harvest.C (match): Log them.

	* root_system.C (output): Don't output 'water_stress_days' twice!

2005-08-23  Per Abrahamsen  <abraham@dina.kvl.dk>

	* action_markvand.C: Added checks.

2005-08-22  Per Abrahamsen  <abraham@dina.kvl.dk>

	* Version 3.77 released.
